--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body{
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 20px;
 	margin: 0px 0px 15px 0px;
-	background: url('../img/icons/check.png') left no-repeat;
+	background: url('img/icons/check.png') left no-repeat;
 	padding: 0px 0px 0px 35px;
 }
 .content-bottom-info-list li:last-child{
@@ -121,7 +121,7 @@ body{
 }
 .content-bottom-info__link span{
 	padding: 0px 30px 0px 0px;
-	background: url('../img/icons/arrow.svg') right no-repeat;
+	background: url('img/icons/arrow.svg') right no-repeat;
 }
 .content-bottom-info__link:hover{
 	background-color:#511e23;
