--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 /*--------------------*/
 
 body{
-	background:#e8e8e8 url('../img/bg.png') 50% 130px no-repeat;
+	background:#e8e8e8 url('img/bg.png') 50% 130px no-repeat;
 }
 
 .content {
